--- a/web-container/src/main/webapp/style.css
+++ b/web-container/src/main/webapp/style.css
@@ -1,4 +1,38 @@
-* {
-    padding:0;
-    margin:0;
+body {
+
+}
+
+.topBorder
+{
+  background: rgb(32, 173, 148);
+  border: 3px solid black;
+}
+
+.compLogo
+{
+  width: 80%;
+  margin-top: 5%;
+  border: 1px solid black;
+}
+.paddingInfo
+{
+  padding: 5px;
+}
+
+.borderRightSide
+{
+  border-right: 1px solid black;
+}
+
+.borderSTop
+{
+  border-top: 1px solid black;
+}
+.paddingcompText
+{
+  padding: 5%;
+}
+#publish{
+  width: 8%;
+  height: 30px;
 }
