Thomas commit update myStylesheet

--- a/web-container/src/main/webapp/css/myStylesheet.css
+++ b/web-container/src/main/webapp/css/myStylesheet.css
@@ -21,8 +21,8 @@
 
 .companyDivHeaderborder
 {
-  border-top: 1px solid rgb(161, 182, 181);
-  border-bottom: 1px solid rgb(161, 182, 181);
+  border-top: 1px solid #12b2c0;
+  border-bottom: 1px solid #12b2c0;
   padding: 25% 0% 25% 0%;
 }
 
@@ -36,7 +36,7 @@
 
 #ThomasborderToCommentSection
 {
-border-bottom: 1px solid gray;
+border-bottom: 1px solid #12b2c0;
 }
 
 #ThomasReviewTextSizeAdjust
