--- a/web-container/src/main/webapp/css/myStylesheet.css
+++ b/web-container/src/main/webapp/css/myStylesheet.css
@@ -12,8 +12,8 @@
 
 .companyInfoTextPadding > div
 {
-  padding-top: 5%;
-  padding-bottom: 10%;
+  padding-top: 2%;
+  padding-bottom: 2%;
   font-size: 20px;
   text-align: left;
 
@@ -49,7 +49,7 @@ height: 20px;
 {
  /* The image used */
 
-    background-image: url('../images/droneComp2.jpg');
+    background-image: url('../images/coverIMG1.jpg');
     /* Set a specific height */
     height: 300px;
 
