--- a/web-container/src/main/webapp/templates/navigation.html
+++ b/web-container/src/main/webapp/templates/navigation.html
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav id="navigation" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -113,34 +113,21 @@
     </ul>
     <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
-        <ul class="nav navbar-nav side-nav" style="background: #12b2c0">
+        <ul class="nav navbar-nav side-nav" style=" background: #12b2c0">
             <li>
-                <a href="index.html"><i class="fa "></i> <p class="myNavBarFontColor"> Dashboard </p></a>
+                <a href="index.html"><i class="fa "></i> <p class="myNavBarFontColor"> Search DroneOperators </p></a>
             </li>
             <li>
-                <a href="charts.html"><i class="fa fa-fw fa-bar-chart-o"></i> <p class="myNavBarFontColor"> Charts </p></a>
+                <a href="charts.html"><i class="fa "></i> <p class="myNavBarFontColor"> My Profile </p></a>
             </li>
             <li>
-                <a href="tables.html"><i class="fa fa-fw fa-table"></i> <p class="myNavBarFontColor"> Tables </p></a>
+                <a href="tables.html"><i class="fa "></i> <p class="myNavBarFontColor"> About Page </p></a>
             </li>
 
-            <li>
-                <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> <p class="myNavBarFontColor"> Dropdown </p> <i class="fa fa-fw fa-caret-down"></i></a>
-                <ul id="demo" class="collapse">
-                    <li>
-                        <a href="#">
-                            <p class="myNavBarFontColor"> Dropdown Item </p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <p class="myNavBarFontColor"> Dropdowm Item </p>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="blank-page.html"><i class="fa fa-fw fa-file"></i> <p class="myNavBarFontColor"> Blank Page </p></a>
+
+            <li ng-controller="ThomasController">
+                <!-- With the ng-model directive you can bind the value of an input field to a variable created in AngularJS. -->
+                <button ng-click="toggleshow()"> {{text}}</button>
             </li>
 
         </ul>
