--- a/web-container/src/main/webapp/css/csaba-style.css
+++ b/web-container/src/main/webapp/css/csaba-style.css
@@ -1,27 +1,34 @@
+/* Prevent Horizontal Scrolling */
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 /* Search Bar */
 
 #search-bar{
-background-color:#12b2c0;
+background-color:#f6f6f6;
 color:black;
 }
 
 #search-bar div {
-background-color:#12b2c0;
+background-color:#f6f6f6;
 
 }
 
 #search-bar div div {
-background-color:#12b2c0;
+background-color:#f6f6f6;
 }
 
 #search-bar .panel {
-border-color:#12b2c0;
+border-color:#f6f6f6;
 box-shadow:none;
 -webkit-box-shadow:none;
 }
 
 #search-bar .panel .panel-body {
-border-color:#12b2c0;
+border-color:#f6f6f6;
 }
 
 #search-bar .panel > .panel-body > p {
@@ -29,12 +36,12 @@ color:black;
 }
 
 #collapsible-search-btn div{
-background-color:#12b2c0;
+background-color:#f6f6f6;
 margin-top:-7px;
 }
 
 #collapsible-search-btn .panel {
-border-color:#12b2c0;
+border-color:#f6f6f6;
 }
 
 #collapsible-search-btn a:link, a:visited, a:hover, a:active {
@@ -92,16 +99,25 @@ opacity:1;
 margin-top:20px;
 }
 
-/* Search Area - Border */
+/* Search Area - Border and background */
 
 #page-wrapper , .top-border{
-border-top:4px solid #d7dee4
+border-top:2px solid #d7dee4;
+/* border-left: 4px solid #d7dee4; */
+background-color: #fafafa;
 }
 
 /* Search Area - Grid View */
 
 #grid-view {
 margin-top:25px;
+}
+
+#grid-view .center-cropped {
+  object-fit: none; /* Do not scale the image */
+  object-position: center; /* Center the image within the element */
+  height: 340px;
+  width: 340px;
 }
 
 /* Search Area - List View */
@@ -144,3 +160,127 @@ text-align:center;
 -moz-transform: rotate(-90deg);
 -o-transform: rotate(-90deg);
 }
+
+/* Navbar link correction */
+
+#navigation > #sidebar {
+overflow-y: hidden;
+}
+
+#navigation > #sidebar > .nav > li > a {
+color:black;
+}
+
+#navigation > #sidebar > .nav > li > a:link {
+    background-color: transparent !important;
+}
+
+#navigation > #sidebar > .nav > li > a:visited {
+    background-color: transparent !important;
+}
+
+#navigation > #sidebar > .nav > li > a:hover {
+    background-color: transparent !important;
+    color:white;
+}
+
+#navigation > #sidebar > .nav > li > a:active {
+    background-color: transparent !important;
+    color:white;
+}
+
+#navigation > #sidebar > .nav > li > a > span {
+font-size: 3em;
+margin-bottom:10%;
+}
+
+#navigation > #sidebar > .nav > li {
+padding-top:5%;
+padding-bottom:5%;
+border-bottom: 5px solid black;
+}
+
+#sidebar p {
+font-weight:bold;
+font-size:1.5em;
+}
+
+#sidebar ul {
+background-color:#12b2c0;
+}
+
+/* About Page */
+
+#about-intro {
+margin-bottom:2%;
+}
+
+#about-faq {
+margin-top:1.5%;
+}
+
+#about-intro .divider {
+margin:auto;
+display:block;
+width:15%;
+border: 1px solid #ddd;
+}
+
+#about-faq .divider {
+margin:auto;
+display:block;
+width:10%;
+border: 1px solid #ddd;
+}
+
+#about-intro p , #about-faq p {
+margin-bottom:2%;
+}
+
+#about-intro h2 , #about-faq h2 {
+margin-bottom:2%;
+}
+
+/*
+body {
+padding: 0;
+margin: 0;
+} */
+
+/* Lightbox container fix */
+
+#gallery {
+padding-top: 2.5%;
+font-size: 18px;
+}
+
+#lb-panel {
+margin-top:2.5%;
+margin-bottom:10%;
+}
+
+#lb-container .lb-img{
+  height: 192px;
+  width: 348px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
