--- a/web-container/src/main/webapp/partials/about-page.html
+++ b/web-container/src/main/webapp/partials/about-page.html
@@ -1,49 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>About</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="css/sb-admin.css" rel="stylesheet">
-
-    <!-- Morris Charts CSS -->
-    <link href="css/plugins/morris.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-    <!-- Csaba Stylesheet -->
-    <link href="css/csaba-style.css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body>
 
         <div id="page-wrapper">
-
             <div class="container-fluid">
-                <div class="row">
+                <div id="about-intro" class="row">
                     <div class="col-lg-12 text-center">
                         <h1> About Us</h1>
-                        <div>
+                        <div class="divider"></div>
                             <h2>What is this?</h2>
                             <p> The Scopito Marketplace helps drone operators and companies that need inspections performed by drones find each other on a common platform. <br/>
                                 Our website is different from other solutions by providing drone operators a platform where they can freely advertise and brand themselves.
@@ -57,12 +19,13 @@
                                 Your profile will only be indexed in the search results if you press the big “Publish” button on the bottom of the page. <br/>
                                 If you are not yet signed up with Scopito, please click the Scopito icon on the dashboard, and sign up for a free account, then follow the steps above.
                             </p>
-                        </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="divider"></div>
+                <div id="about-faq" class="row">
                     <div class="col-lg12 text-center">
                         <h1>FAQ</h1>
+                        <div class="divider"></div>
                         <h2>What is Scopito?</h2>
                         <p> Scopito is a cloud-based service that creates an efficient workflow for carrying out image-based inspections mainly taken by drones. <br/>
                             It is an excellent way of delivering results instead of using Dropbox or handing over a USB stick. We also offer image analysis capabilities. <br/>
@@ -80,24 +43,11 @@
 
             </div>
             <!-- /.container-fluid -->
-
         </div>
         <!-- /#page-wrapper -->
 
 
     <!-- /#wrapper -->
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
 
-    <!-- Morris Charts JavaScript -->
-    <script src="js/plugins/morris/raphael.min.js"></script>
-    <script src="js/plugins/morris/morris.min.js"></script>
-    <script src="js/plugins/morris/morris-data.js"></script>
-
-</body>
-
-</html>
