--- a/web-container/src/main/webapp/partials/profile-page.html
+++ b/web-container/src/main/webapp/partials/profile-page.html
@@ -241,8 +241,6 @@
 
     </div>
 
-
-
     <!-- TinyMCE -->
     <script src="tinymce/js/tinymce/jquery.tinymce.min.js"></script>
     <script src="tinymce/js/tinymce/tinymce.min.js"></script>
@@ -250,7 +248,7 @@
     <!-- TinyMCE init -->
     <script>
     tinymce.init({
-    selector: '#MyTextarea'
+    selector: '#MyTextarea',
     height: 500,
     menubar: false,
     plugins: [
@@ -259,7 +257,7 @@
     'insertdatetime media table contextmenu paste code'
     ],
     toolbar: 'undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image',
-    content_css: 'Introduce yourself here!'
+    content_css: '//www.tinymce.com/css/codepen.min.css'
     });
     </script>
     <!-- ng-view end -->
